# flake8-class-attributes-order

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  setup.cfg  setup.py
flake8_class_attributes_order/: checker.py  model_parts_info.py  ordering_errors.py
flake8_function_order/: checker.py  model_parts_info.py  ordering_errors.py
tests/: conftest.py  test_class_attributes_order.py
tests/test_files/: configurable.py  errored.py  late_docstring.py  ok.py  special_method.py  strict_errored.py  strict_ok.py
