[metadata]
name = flake8_function_order
version = 0.0.5
description = flake8 extension that checks function order within a class
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TylerYep/flake8-function-order
author = Tyler Yep
author_email = tyep@cs.stanford.edu
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Console
    Framework :: Flake8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Documentation
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
keywords = flake8

[options]
packages = find:
py_modules = flake8_function_order
install_requires =
    flake8
    setuptools
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.entry_points]
flake8.extension =
    CCE = flake8_function_order.checker:ClassFunctionOrderChecker

[mypy]
strict = True
ignore_missing_imports = True
implicit_reexport = True
warn_unused_configs = True

[mypy-tests.test_files.*]
ignore_errors = True

[pylint.MESSAGES CONTROL]
enable =
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
disable =
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
    too-many-return-statements,
    too-few-public-methods,
    line-too-long,
    invalid-name,
    blacklisted-name,

[isort]
profile = black

[flake8]
exclude = tests/test_files/*
max-line-length = 88
extend-ignore = E203,F401
